[package]
name = "gdb"
description = "Library for controlling GDB"
version = "0.1.0"
authors = ["Lipka Boldizsár <lipkab@zoho.com>"]
repository = "https://github.com/lipk/rust-gdb"
readme = "README.md"
keywords = ["gdb", "debugger"]
license = "GPL-3.0"

[dependencies]
regex = "1.3"
lazy_static = "1.4"
slog = { version = "2.5", optional = true }